@startuml

set separator none
package collection.controller {
    class CollectionController <<Function Group>> {
        + {static} addCollection(req: Request, res: Response): RequestHandler
        + {static} addCollectionSong(req: Request, res: Response): RequestHandler
        + {static} getAllCollections(req: Request, res: Response): RequestHandler
        + {static} getAllPlaylists(req: Request, res: Response): RequestHandler
        + {static} getAllAlbums(req: Request, res: Response): RequestHandler
        + {static} getCollectionByID(req: Request, res: Response): RequestHandler
        + {static} updateCollection(req: Request, res: Response): RequestHandler
        + {static} deleteCollection(req: Request, res: Response): RequestHandler
        + {static} deleteCollectionSong(req: Request, res: Response): RequestHandler
    }
}

package services {
    class Redis <<Singleton>> {
        - client: UpstashRedis

        + set<T>(key: string, data: T, options?: SetCommandOptions): Promise<"OK" | T | null>
        + get<T>(key: string): Promise<T | null>
        + del(keys: string[]): Promise<void>
    }
    class Cloudinary <<Singleton>> {
        + upload(file: Express.Multer.File,folder: string,id: string): Promise<string>
        + delete(folder: string, fileName: string): Promise<void>
    }
}

CollectionController ..> Cloudinary
CollectionController ..> Redis

@enduml